# advanced-nlp-course

./: .gitignore  readme.md
01_intro/: rule_based_classifier.ipynb  trained_bow_classifier.ipynb
2025/01_intro/: rule_based_classifier.ipynb
2025/kappa_agreement_exercise/: README.md
2025/minimalist_llm/: rope.py  setup.sh
2025/rag/: readme.md
2026/: readme.md
2026/01_intro/: complex-prompt-with-10-constraints.txt  rule_based_classifier.ipynb  trained_bow_classifier.ipynb
2026/02_transformers/: README.md  lm_basics_bigrams.ipynb  lm_basics_neural.ipynb  recurrent_encdec.ipynb  recurrent_lm.ipynb  transformer.ipynb
2026/03_pretraining/: README.md  llms_in_action.ipynb  pretraining.ipynb  sample.json  (+1 more)
2026/05_prompting/scientific-task-example/jinja-templating-demo/: README.md  pyproject.toml
2026/05_prompting/scientific-task-example/jinja-templating-demo/data/: research_tasks.json
2026/05_prompting/scientific-task-example/jinja-templating-demo/outputs/: prompt_check-ontology-alignment-candidates.txt  prompt_extract-ald-process-parameters.txt  prompt_summarize-survey-table-findings.txt  task_report.md
2026/05_prompting/scientific-task-example/jinja-templating-demo/src/jinja_templating_demo/: __init__.py  render.py
2026/05_prompting/scientific-task-example/jinja-templating-demo/templates/: report.md.j2
2026/05_prompting/scientific-task-example/jinja-templating-demo/templates/prompts/: task_prompt.txt.j2
kappa_agreement_exercise/: README.md  annotation_data.csv  kappa_agreement_score.ipynb
minimalist_llm/: README.md
rag/: readme.md
(+120 files in other folders)
