[project]
name = "jinja-templating-demo"
version = "0.1.0"
description = "A small demo showing Jinja templates for reports and prompt generation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["Jinja2>=3.1"]

[project.scripts]
render-demo = "jinja_templating_demo.render:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
